# cell_ontology_agent

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_demo.py
.github/workflows/: ci.yml  curate.yml
benchmark/: RESULTS.md  make_figures.py  run_benchmark.py
benchmark/results/: b1_recognition.csv  b2_genus.csv  b3_location.csv  b4_surface.csv  b6_discrimination.csv  b7_go_function.csv  b8_reconstruction.csv  metrics.json
cellscribe/: __init__.py  action.py  agent.py  cache.py  cli.py  demo.py  dossier.py  integrations.py  llm.py  llm_ecosystem.py  models.py  reasoning.py  registry.py  spires.py
cellscribe/tools/: __init__.py  definition.py  go_support.py  literature.py  markers.py  naming.py  ontology.py  robot_tools.py  taxon.py  validation.py
clara/: __init__.py  agent.py  cache.py  cli.py  demo.py  dossier.py  llm.py  models.py
clara/tools/: __init__.py  definition.py  validation.py
demo_data/: striatum_demo_expr.csv  striatum_nsforest_demo_expr.csv
demo_data/fixtures/: 103aae6906c371cd.json  13f7d49179ae415d.json  23eb4731dad9fcbb.json  26db65381ff17771.json  295aaa1dd3bf3605.json  31dfa6d7bc425de0.json  43f2b6f5d27d2eb2.json  4e4efe7f264aef07.json  56cb7f82374e3927.json  636ca11c2c1bdfcf.json  659e1be68defbbce.json  _index.json  a35c356ea838e66a.json  a7ebf71e919089ab.json  abb967be18d36bb8.json  aec5eb8c649e94cc.json  bd4485015f014a94.json  (+7 more)
examples/: 01_curate_api.py  02_marker_matrix.py  README.md
figures/: make_architecture.py  make_benchmark.py  make_dataflow.py  make_diagrams.py  make_example.py  make_hero.py  make_limitations.py  make_pipeline.py
odk/: Makefile  README.md
scripts/: setup_llm_env.sh
tests/: test_cellscribe.py  test_clara.py  test_edge_cases.py  test_integrations.py
