[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cellscribe"
version = "0.2.0"
description = "CellScribe — a grounded, agentic assistant for Cell Ontology curation (Biomni-inspired)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.20"]

[project.optional-dependencies]
markers = ["pandas>=0.25", "numpy>=1.18"]
nsforest = ["nsforest>=4.1", "scanpy>=1.9", "anndata>=0.9", "plotly"]   # real NS-Forest panels (else built-in fallback)

[project.scripts]
cellscribe = "cellscribe.cli:main"

[tool.setuptools]
packages = ["cellscribe", "cellscribe.tools"]
